# Notes

./: .env.example  .gitignore  docker-compose.yml  start.sh
config/: redis.conf
miscellaneous/: actix  pgadmin  setup.sh  start.sh  swap.sh
notes-actix/: .gitignore  Cargo.toml  Dockerfile
notes-actix/migrations/: 0001_notes.up.sql  0001_users.down.sql  0001_users.up.sql  0002_notes.up.sql  0002_notes_trigger.down.sql  0002_notes_trigger.up.sql  0002_users.down.sql  0002_users.up.sql  0003_trigger.down.sql  0003_trigger.up.sql
notes-actix/src/: errors.rs  helpers.rs  jwt.rs  lib.rs  main.rs  types.rs  utils.rs
notes-actix/src/notes/: handler.rs  mod.rs  models.rs  routes.rs  types.rs
notes-actix/src/ping/: handler.rs
notes-actix/src/users/: admin.rs  handler.rs  helpers.rs  mod.rs  models.rs  routes.rs  types.rs
