[package]
name = "notes-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
argon2 = "0.5.2"
bb8 = "0.8.1"
bb8-redis = "0.14.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "chrono", "postgres"] }
thiserror = "1.0.51"
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
